# fabrix

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: README.md
examples/dispatcher_service/: .gitignore  Cargo.toml  log4rs.yml
examples/dispatcher_service/src/: csv2db.rs  csv2json.rs  db2csv.rs  db2parquet.rs  error.rs  lib.rs  main.rs  mongo2csv.rs  mongo2parquet.rs  parquet2mongo.rs  requests.rs  responses.rs  utils.rs  xl2db.rs  xl2json.rs
examples/dispatcher_service/tests/: init_db.rs
examples/dync_service/: Cargo.toml
examples/dync_service/src/: main.rs  mongo.rs  sql.rs  util.rs
examples/file_process_service/: Cargo.toml
examples/file_process_service/src/: index.html  main.rs
examples/xl_process_service/: Cargo.toml
examples/xl_process_service/src/: main.rs
fabrix/: Cargo.toml
fabrix-core/: Cargo.toml
fabrix-core/src/: error.rs  fabrix.rs  fmt.rs  lib.rs  macros.rs  namedrow.rs  row.rs  rowframe.rs  rowmap.rs  schema.rs  series.rs  util.rs  value.rs
fabrix-core/tests/: declare_df_test.rs
fabrix-csv/: Cargo.toml
fabrix-dyn-conn/: Cargo.toml
fabrix-dyn-conn/src/: dc.rs  error.rs  lib.rs  macros.rs  mongo.rs  sql.rs
fabrix-json/: Cargo.toml
fabrix-json/src/: de.rs  ec.rs  error.rs  ft.rs  lib.rs  rd.rs  se.rs  wr.rs
fabrix-mg/: Cargo.toml
fabrix-mg-derive/: Cargo.toml
fabrix-mg-derive/src/: dr.rs  indexes.rs  lib.rs
fabrix-mg/src/: bd.rs  dr.rs  dy.rs  ec.rs  error.rs  indexes.rs  lib.rs
fabrix-parquet/: Cargo.toml
fabrix-sql/: Cargo.toml
fabrix-sql/src/: error.rs  lib.rs
fabrix-sql/src/builder/: bd.rs  macros.rs  mod.rs  mutation_ddl.rs  mutation_dml.rs  query_dml.rs  sql_adt.rs
fabrix-sql/src/executor/: ec.rs  loader.rs  macros.rs  mod.rs  processor.rs  types.rs
fabrix-sql/src/sql_builder/: builder.rs  interface.rs  macros.rs  mod.rs  mutation_ddl.rs  sql_adt.rs
fabrix-sql/src/sql_executor/: executor.rs  loader.rs  macros.rs  mod.rs  types.rs
fabrix-sql/tests/: fn_test.rs  sql_executor_test.rs  sql_types_test.rs
fabrix-xl/: Cargo.toml
fabrix-xl/src/: ec.rs  error.rs  executor.rs  lib.rs  util.rs  wb.rs  workbook.rs  worksheet.rs  ws.rs
fabrix/src/: errors.rs  lib.rs  macros.rs  prelude.rs
fabrix/src/core/: dataframe.rs  error.rs  fabrix.rs  fmt.rs  macros.rs  mod.rs  row.rs  rowframe.rs  schema.rs  series.rs  util.rs  value.rs
fabrix/src/dispatcher/: ds.rs  mod.rs  xl_bson.rs  xl_db.rs  xl_json.rs  xl_reader.rs  xl_source.rs  xl_to_db.rs  xl_to_json.rs
fabrix/src/sources/: error.rs  mod.rs
fabrix/src/sources/bson/: error.rs  mod.rs
fabrix/src/sources/csv/: executor.rs  mod.rs  reader.rs  writer.rs
fabrix/src/sources/db/: error.rs  mod.rs
fabrix/src/sources/db/sql_builder/: adt.rs  builder.rs  interface.rs  mod.rs  mutation_dml.rs  query_dml.rs  util.rs
fabrix/src/sources/db/sql_executor/: executor.rs  loader.rs  macros.rs  mod.rs  processor.rs  types.rs
fabrix/src/sources/file/: error.rs  mod.rs
fabrix/src/sources/file/xl/: executor.rs  mod.rs  util.rs  workbook.rs  worksheet.rs
fabrix/src/sources/json/: mod.rs  reader.rs  writer.rs
fabrix/src/sources/mongo/: mod.rs  reader.rs  writer.rs
fabrix/src/sources/parquet/: mod.rs  reader.rs  writer.rs
fabrix/src/sources/sql/: error.rs  mod.rs  reader.rs  writer.rs
fabrix/src/sources/sql/sql_builder/: adt.rs  builder.rs  interface.rs  macros.rs  mod.rs  mutation_ddl.rs  mutation_dml.rs  query_ddl.rs  query_dml.rs  sql_adt.rs  util.rs
fabrix/src/sources/sql/sql_executor/: executor.rs  loader.rs  macros.rs  mod.rs  processor.rs  types.rs
fabrix/src/sources/xl/: executor.rs  mod.rs  reader.rs  util.rs  workbook.rs  worksheet.rs
fabrix/tests/: closure_trait_object_test.rs  custom_se_de_test.rs  declare_df_test.rs  dispatcher_tests.rs  fn_test.rs  new_types_test.rs  read_xl_to_db_test.rs  sq_binding_test.rs  sql_executor_test.rs  sql_types_test.rs  sqlx_test.rs  trait_fn_as_input_test.rs
mock/: test.csv  test.json  test.parquet  test.xlsx  test2.xlsx
