[package]
name = "fabrix-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0", features = ["serde"] }
itertools = "0"
polars = { version = "0", features = [
    "bigidx",
    "strings",
    "dtype-full",
    "object",
] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uuid = { version = "0", features = ["serde", "v4"] }
