[package]
name = "fabrix-core"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0", features = ["serde"] }
itertools = "0"
polars = { version = "0", features = [
    "bigidx",
    "strings",
    "dtype-full",
    "object",
] }
ref-cast = "1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1"
