[package]
name = "fabrix-dyn-conn"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"


[dependencies]
fabrix-core = { path = "../fabrix-core" }
fabrix-sql = { path = "../fabrix-sql", optional = true }
fabrix-mg = { path = "../fabrix-mg", optional = true }

async-trait = "0"
dashmap = "5"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "0", features = ["serde", "v4"] }

[features]
default = ["sql"]
sql = ["dep:fabrix-sql"]
mongo = ["dep:fabrix-mg"]
