[package]
name = "fabrix-mg"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
fabrix-mg-derive = { path = "../fabrix-mg-derive", optional = true }

bson = "2"
mongodb = "2"
serde = { version = "1", features = ["derive"] }



[features]
default = ["derive"]
derive = ["dep:fabrix-mg-derive"]
