[package]
name = "fabrix"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
# Self-contained dependencies
fabrix-core = { path = "../fabrix-core" }
fabrix-sql = { path = "../fabrix-sql", optional = true }
fabrix-xl = { path = "../fabrix-xl", optional = true }
fabrix-mg = { path = "../fabrix-mg", optional = true }
fabrix-dyn-conn = { path = "../fabrix-dyn-conn", optional = true }

# General dependencies
async-trait = "0"
chrono = { version = "0", features = ["serde"] }
itertools = "0"
polars = { version = "0", features = [
    "lazy",
    "bigidx",
    "strings",
    "parquet",
    "json",
    "dtype-full",
    "object",
] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0", features = ["serde", "v4"] }


[features]
default = ["sql", "xl", "csv", "parquet", "json", "bson", "mongo", "dync"]
sql = ["dep:fabrix-sql"]
xl = ["dep:fabrix-xl"]
csv = []
parquet = []
json = []
bson = ["dep:fabrix-mg"]
mongo = ["dep:fabrix-mg"]
dync = ["dep:fabrix-dyn-conn"]
