[package]
name = "fabrix"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
# Self-contained dependencies
fabrix-core = { path = "../fabrix-core" }
fabrix-json = { path = "../fabrix-json", optional = true }
fabrix-csv = { path = "../fabrix-csv", optional = true }
fabrix-parquet = { path = "../fabrix-parquet", optional = true }
fabrix-xl = { path = "../fabrix-xl", optional = true }
fabrix-sql = { path = "../fabrix-sql", optional = true }
fabrix-mg = { path = "../fabrix-mg", optional = true }
fabrix-dyn-conn = { path = "../fabrix-dyn-conn", optional = true }

# General dependencies
async-trait = "0"
chrono = { version = "0", features = ["serde"] }
itertools = "0"
polars = { version = "0", features = [
    "lazy",
    "bigidx",
    "strings",
    "parquet",
    "json",
    "dtype-full",
    "object",
] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0", features = ["serde", "v4"] }


[features]
default = ["csv", "parquet", "json"]
json = ["dep:fabrix-json"]
xl = ["dep:fabrix-xl"]
csv = ["dep:fabrix-csv"]
parquet = ["dep:fabrix-parquet"]
sql = ["dep:fabrix-sql"]
mongo = ["dep:fabrix-json", "dep:fabrix-mg"]
dync = ["dep:fabrix-dyn-conn"]

full = [
    "json",
    "csv",
    "parquet",
    "xl",
    "sql",
    "mongo",
    "dync",
]


[[test]]
name = "dispatcher_tests"
path = "tests/dispatcher_tests.rs"
required-features = ["sql", "xl"]

[[test]]
name = "read_xl_to_db_test"
path = "tests/read_xl_to_db_test.rs"
required-features = ["sql", "xl"]


