[package]
name = "dispatcher_service"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
fabrix = { path = "../../fabrix" }

actix-multipart = "0"
actix-web = { version = "4", default-features = false, features = ["cookies", "macros"]}
derive_more = "0"
env_logger = "0"
futures = "0"
log = "0"
log4rs = { version = "1", features = ["console_appender", "file_appender", "rolling_file_appender", "compound_policy", "size_trigger"] }
sanitize-filename = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
