[package]
name = "dync_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fabrix = { path = "../../fabrix", features = ["sql", "dync"] }

actix-web = "4"
serde = { version = "1", features = ["derive"] }
