[package]
name = "file_process_service"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
fabrix = { path = "../../fabrix" }
fabrix-xl = { path = "../../fabrix-xl" }

actix-multipart = "0"
actix-web = { version = "4", default-features = false, features = ["cookies", "macros"]}
clap = { version = "3.1.16", features = ["derive"] }
futures-util = "0"
sanitize-filename = "0"
serde_json = "1"
serde = "1"
uuid = { version = "0", features = ["v4"] }

