[package]
name = "xl_process_service"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0"
actix-web = "4"
futures-util = "0"
sanitize-filename = "0"
uuid = { version = "0", features = ["v4"] }

fabrix = { path = "../../fabrix" }
serde_json = "1.0.79"
